fix absolute elements miss align

--- a/client/src/components/ForumComponents/ProfileModal.module.css
+++ b/client/src/components/ForumComponents/ProfileModal.module.css
@@ -75,15 +75,22 @@
   left: 50%;
   z-index: 1;
 }
-.profile_img img[alt="image-switch-icon"] {
+.profile_img label {
   position: absolute;
-  width: 3rem;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
   cursor: pointer;
+}
+.profile_img label img[alt="switch-icon"] {
+  width: 40%;
+  height: 40%;
+  object-fit: contain;
 }
 .profile_img input[type="file"] {
   display: none;
@@ -137,7 +144,7 @@
 .profile_info .profile_controls_container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
 }
 
 .profile_controls_container a {
@@ -148,6 +155,9 @@
 .profile_info .profile_controls {
   margin-top: 0.5rem;
   cursor: pointer;
+}
+.profile_info .profile_controls p {
+  width: fit-content;
 }
 
 .profile_info .profile_controls > * {
